fix: fixed bug according to elements visibility

--- a/My Game/styles/styles_game.css
+++ b/My Game/styles/styles_game.css
@@ -92,7 +92,3 @@
     width: 100%;
     height: 100%;
 }
-/* an extra style using during game */
-.visible {
-    visibility: hidden;
-}
